feat: creates api/v1/restaurants/[restaurant]/events/[id] get handler and returns ocupation on api
